[package]
name = "portion-rs"
description = "A simple interval library inspired by Python's portion."
documentation = "https://docs.rs/portion-rs"
homepage = "https://github.com/Elinvynia/portion-rs"
repository = "https://github.com/Elinvynia/portion-rs.git"
keywords = ["portion", "interval"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.2.0"
edition = "2018"
